# ntnu-bb-lab-goblin

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
src/: cli.py  main.py
src/config/: settings.py
src/downloader/: driver.py  file_utils.py  navigation.py  page_parser.py  selenium_utils.py  submission.py
src/exceptions/: custom_exceptions.py
src/parser/: parser.py
