[tool.poetry]
name = "bb-downloader-cli"
version = "0.1.0"
description = "A command-line tool for downloading submissions from Blackboard."
authors = ["Callum Gran <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"