[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntnu-bb-downloader-cli"
version = "0.1.0"
description = "A CLI tool for downloading NTNU Blackboard submissions"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Callum Gran", email = "callum.gran@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "selenium>=4.0.0",
  "webdriver-manager>=4.0.0",
]

[project.scripts]
bb-downloader = "cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
